--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,11 +2,11 @@
 @import "./utils/variables";
 @import "./utils/visually-hidden";
 
-// base styl
+// base style
 @import "./base/base";
 @import "./base/reset";
 
-// components style;
+// components style
 @import "./components/section";
 @import "./components/container";
 @import "./components/header";
