--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,9 +7,18 @@ body {
 
 .section__title {
 	font-weight: 700;
-	font-size: 36px;
-	line-height: calc(42 / 36);
+	font-size: 28px;
+	line-height: calc(33 / 28);
 	text-align: center;
 
-	margin-bottom: 50px;
+	margin-bottom: 30px;
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		font-size: 36px;
+		line-height: calc(42 / 36);
+		// text-align: center;
+
+		margin-bottom: 50px;
+	}
 }
