--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -21,4 +21,18 @@ ul {
 
 img {
 	display: block;
+	max-width: 100%;
+	height: auto;
+}
+
+// mobile screen
+@media screen and (min-width: 480px) {
+}
+
+// tablet screen
+@media screen and (min-width: 768px) {
+}
+
+// desctop screen
+@media screen and (min-width: 1200px) {
 }
