--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,8 +1,24 @@
 .container {
-	width: 1200px;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: auto;
 	margin-right: auto;
-	// outline: 1px solid tomato;
+
+	outline: 2px solid tomato;
+	outline-offset: -2px;
+
+	// mobile screen
+	@media screen and (min-width: 480px) {
+		width: 480px;
+	}
+
+	// tablet screen
+	@media screen and (min-width: 768px) {
+		width: 768px;
+	}
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		width: 1200px;
+	}
 }
