--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,7 +23,14 @@
 @import "./components/logo-footer";
 @import "./components/address-footer";
 @import "./components/join";
+@import "./components/join-socials";
 @import "./components/subscribe";
 @import "./components/portfolio-filters";
 @import "./components/portfolio-works";
+
 @import "./components/modal";
+
+@import "./components/mobile-menu";
+@import "./components/mobile-navigation";
+@import "./components/mobile-contacts-header";
+@import "./components/mobile-socials";
