--- a/sass/components/_logo-header.scss
+++ b/sass/components/_logo-header.scss
@@ -8,7 +8,17 @@
 }
 
 .logo__part {
-	margin-right: 93px;
+	margin: 0;
+
+	// tablet screen
+	@media screen and (min-width: 768px) {
+		margin-right: 88px;
+	}
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		margin-right: 93px;
+	}
 }
 
 .logo__part--accent {
