--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,10 +1,14 @@
-.nav {
+.nav__list {
 	display: flex;
 	align-items: center;
 	gap: 50px;
+
+	@media screen and (max-width: 767px) {
+		display: none;
+	}
 }
 
-.nav__list {
+.nav__item {
 	display: block;
 
 	padding-top: 32px;
@@ -26,7 +30,7 @@
 	}
 }
 
-.nav__list--curent {
+.nav__item--curent {
 	color: var(--accent-color);
 
 	&::after {
