--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,17 +13,25 @@
 
 .hero__title {
 	font-weight: 900;
-	font-size: 44px;
-	line-height: calc(60 / 44);
+	font-size: 26px;
+	line-height: calc(42 / 26);
 	letter-spacing: 0.06em;
 	text-align: center;
 	text-transform: uppercase;
 	color: var(--primary-white-color);
 
-	width: 696px;
+	width: 360px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 30px;
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		font-size: 44px;
+		line-height: calc(60 / 44);
+
+		width: 696px;
+	}
 }
 
 .hero__btn {
