--- a/sass/components/_join-socials.scss
+++ b/sass/components/_join-socials.scss
@@ -9,14 +9,23 @@
 	transition: var(--animation-bcg);
 }
 
-.socials__icon--color {
-	fill: currentColor;
-
-	transition: var(--animation-color);
-}
-
-// .socials__link:hover,
-// .socials__link:focus {
+// .socials__link--color {
+// 	background-color: rgba(255, 255, 255, 0.1);
 // 	color: var(--primary-white-color);
-// 	background-color: var(--accent-color);
+// 	// /* outline: 2px solid red;
+// 	// outline-offset: -2px; */
+
+// 	transition: var(--animation-bcg);
 // }
+
+// .socials__icon--color {
+// 	fill: currentColor;
+
+// 	transition: var(--animation-color);
+// }
+
+// // .socials__link:hover,
+// // .socials__link:focus {
+// // 	color: var(--primary-white-color);
+// // 	background-color: var(--accent-color);
+// // }
