--- a/sass/components/_logo-header.scss
+++ b/sass/components/_logo-header.scss
@@ -2,9 +2,15 @@
 	font-family: "Raleway", Verdana, sans-serif;
 	font-style: normal;
 	font-weight: 700;
-	font-size: 26px;
-	line-height: calc(31 / 26);
+	font-size: 24px;
+	line-height: calc(28 / 24);
 	color: var(--logo-primary-color);
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		font-size: 26px;
+		line-height: calc(31 / 26);
+	}
 }
 
 .logo__part {
