--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,8 @@ body {
 	font-family: "Roboto", Verdana, sans-serif;
 	color: var(--primary-text-color);
 	letter-spacing: 0.03em;
+
+	overflow-x: hidden;
 }
 
 .section__title {
