--- a/sass/components/_portfolio-filters.scss
+++ b/sass/components/_portfolio-filters.scss
@@ -1,11 +1,40 @@
+// .portfolio {
+// 	width: 320px;
+// }
+
 .portfolio__filters {
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	gap: 8px;
+	flex-wrap: wrap;
 
-	margin-bottom: 50px;
+	margin-bottom: 40px;
+
+	// mobile screen
+	@media screen and (max-width: 767px) {
+		width: 330px;
+	}
+
+	// tablet screen
+	@media screen and (min-width: 768px) {
+		justify-content: center;
+		margin-bottom: 14px;
+	}
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		margin-bottom: 50px;
+	}
 }
+
+// .portfolio__filters {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	gap: 8px;
+
+// 	margin-bottom: 50px;
+// }
 
 .portfolio__btn {
 	font-family: inherit;
@@ -32,8 +61,39 @@
 	}
 }
 
+// .portfolio__btn {
+// 	font-family: inherit;
+// 	font-weight: 500;
+// 	font-size: 16px;
+// 	line-height: calc(26 / 16);
+// 	text-align: center;
+// 	color: var(--primary-text-color);
+// 	background: var(--section-team-bcg);
+// 	border-radius: 4px;
+// 	border: none;
+// 	cursor: pointer;
+// 	text-align: center;
+// 	letter-spacing: 0.03em;
+
+// 	padding: 6px 22px;
+
+// 	transition: var(--animation-color), var(--animation-bcg);
+
+// 	&:hover,
+// 	&:focus {
+// 		color: var(--primary-white-color);
+// 		background: var(--accent-color);
+// 	}
+// }
+
 .portfolio__btn--active {
 	color: var(--primary-white-color);
 	background: var(--accent-color);
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
+// .portfolio__btn--active {
+// 	color: var(--primary-white-color);
+// 	background: var(--accent-color);
+// 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+// }
