--- a/css/main.css
+++ b/css/main.css
@@ -976,32 +976,58 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  gap: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .work:last-child {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
 }
 
 .work__item {
+  width: 100%;
   background: var(--primary-white-color);
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
   -webkit-transition: var(--animation-box-shadow);
   transition: var(--animation-box-shadow);
-}
-.work__item:nth-child(3n) {
-  margin-right: 0;
-}
-.work__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }
 .work__item:hover, .work__item:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+@media screen and (min-width: 768px) {
+  .work__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work__item {
+    width: 370px;
+  }
+}
 
 .work__thumb {
   position: relative;
   overflow: hidden;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.work__image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .work__overlay {
@@ -1029,21 +1055,19 @@ img {
   -webkit-transition: var(--animation-overlay);
   transition: var(--animation-overlay);
 }
-
-.work__item:hover .work__overlay,
-.work__item:focus .work__overlay {
+.work__item:hover .work__overlay, .work__item:focus .work__overlay {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
 
 .work__caption {
-  border-right: 1px solid var(--portfolio-box);
-  border-bottom: 1px solid var(--portfolio-box);
-  border-left: 1px solid var(--portfolio-box);
   padding-top: 20px;
   padding-right: 24px;
   padding-bottom: 20px;
   padding-left: 24px;
+  border-right: 1px solid var(--portfolio-box);
+  border-bottom: 1px solid var(--portfolio-box);
+  border-left: 1px solid var(--portfolio-box);
 }
 
 .work__title {
@@ -1052,14 +1076,14 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
-  width: 322px;
+  width: 100%;
 }
 
 .work__text {
   font-size: 16px;
   line-height: 1.875;
   color: var(--second-text-color);
-  width: 322px;
+  width: 100%;
 }
 
 .backdrop {
