--- a/sass/components/_portfolio-works.scss
+++ b/sass/components/_portfolio-works.scss
@@ -1,35 +1,89 @@
 .work {
 	display: flex;
+	// flex-direction: column;
+	gap: 30px;
+	align-items: center;
+	justify-content: center;
 	flex-wrap: wrap;
-	// /* gap: 30px; */
+
+	width: 100%;
+
+	// tablet screen
+	@media screen and (min-width: 768px) {
+		&:last-child {
+			justify-content: flex-start;
+		}
+	}
 }
 
+// .work {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	// /* gap: 30px; */
+// }
+
 .work__item {
+	width: 100%;
+
 	background: var(--primary-white-color);
 
-	width: 370px;
-	margin-right: 30px;
-	margin-bottom: 30px;
-
 	transition: var(--animation-box-shadow);
-
-	&:nth-child(3n) {
-		margin-right: 0;
-	}
-
-	&:nth-last-child(-n + 3) {
-		margin-bottom: 0;
-	}
 
 	&:hover,
 	&:focus {
 		box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 	}
+
+	// tablet screen
+	@media screen and (min-width: 768px) {
+		width: 354px;
+	}
+
+	// desctop screen
+	@media screen and (min-width: 1200px) {
+		width: 370px;
+	}
 }
+
+// .work__item {
+// 	background: var(--primary-white-color);
+
+// 	width: 370px;
+// 	margin-right: 30px;
+// 	margin-bottom: 30px;
+
+// 	transition: var(--animation-box-shadow);
+
+// 	&:nth-child(3n) {
+// 		margin-right: 0;
+// 	}
+
+// 	&:nth-last-child(-n + 3) {
+// 		margin-bottom: 0;
+// 	}
+
+// 	&:hover,
+// 	&:focus {
+// 		box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+// 	}
+// }
 
 .work__thumb {
 	position: relative;
 	overflow: hidden;
+
+	align-items: center;
+}
+
+// .work__thumb {
+// 	position: relative;
+// 	overflow: hidden;
+// }
+
+.work__image {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .work__overlay {
@@ -53,23 +107,61 @@
 	backdrop-filter: blur(3px);
 
 	transition: var(--animation-overlay);
-}
 
-.work__item:hover .work__overlay,
-.work__item:focus .work__overlay {
-	transform: translateY(0%);
+	.work__item:hover &,
+	.work__item:focus & {
+		transform: translateY(0%);
+	}
 }
+// .work__overlay {
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+
+// 	transform: translateY(100%);
+
+// 	width: 100%;
+// 	height: 100%;
+// 	padding-left: 24px;
+// 	padding-right: 24px;
+// 	display: flex;
+// 	align-items: center;
+
+// 	font-size: 18px;
+// 	line-height: calc(28 / 18);
+// 	color: var(--primary-white-color);
+// 	background-color: rgba(33, 150, 243, 0.9);
+// 	backdrop-filter: blur(3px);
+
+// 	transition: var(--animation-overlay);
+// }
+
+// .work__item:hover .work__overlay,
+// .work__item:focus .work__overlay {
+// 	transform: translateY(0%);
+// }
 
 .work__caption {
-	border-right: 1px solid var(--portfolio-box);
-	border-bottom: 1px solid var(--portfolio-box);
-	border-left: 1px solid var(--portfolio-box);
-
 	padding-top: 20px;
 	padding-right: 24px;
 	padding-bottom: 20px;
 	padding-left: 24px;
+
+	border-right: 1px solid var(--portfolio-box);
+	border-bottom: 1px solid var(--portfolio-box);
+	border-left: 1px solid var(--portfolio-box);
 }
+
+// .work__caption {
+// 	border-right: 1px solid var(--portfolio-box);
+// 	border-bottom: 1px solid var(--portfolio-box);
+// 	border-left: 1px solid var(--portfolio-box);
+
+// 	padding-top: 20px;
+// 	padding-right: 24px;
+// 	padding-bottom: 20px;
+// 	padding-left: 24px;
+// }
 
 .work__title {
 	font-weight: 700;
@@ -79,13 +171,32 @@
 
 	margin-bottom: 4px;
 
-	width: 322px;
+	width: 100%;
 }
+
+// .work__title {
+// 	font-weight: 700;
+// 	font-size: 18px;
+// 	line-height: calc(36 / 18);
+// 	letter-spacing: 0.06em;
+
+// 	margin-bottom: 4px;
+
+// 	width: 322px;
+// }
 
 .work__text {
 	font-size: 16px;
 	line-height: calc(30 / 16);
 	color: var(--second-text-color);
 
-	width: 322px;
+	width: 100%;
 }
+
+// .work__text {
+// 	font-size: 16px;
+// 	line-height: calc(30 / 16);
+// 	color: var(--second-text-color);
+
+// 	width: 322px;
+// }
